# vf-cpp

./: CMakeLists.txt  VfCppConfig.cmake.in  vf-cpp-component.cpp  vf-cpp-compproxy.h  vf-cpp-entity.cpp  vf-cpp-entity.h  vf-cpp-rpc.cpp  vf-cpp-rpc.h
.github/workflows/: buildAndTest.yml  triggerMetaUpdates.yml
